@@ -28,14 +28,10 @@ public class TexturePackDisplay extends Display {
 	private static final String DEFAULT_TEXTURE_PACK = "Default"; // Default texture
 	private static final String[] ENTRY_NAMES = new String[] { "items.png", "tiles.png", "entities.png", "gui.png" }; // Spritesheets
 
-	private static final List<ListEntry> textureList = new ArrayList<>();
 	private static final File location = new File(FileHandler.getSystemGameDir() + "/" + FileHandler.getLocalGameDir() + "/TexturePacks");
 
-	/* The texture packs are put in a folder generated by the game called "Textures packs".
-	 * Many texture packs can be put according to the number of files.
-	 */
-
-	public static List<ListEntry> loadTexturePacks() {
+	private static List<ListEntry> getAllTexturePacks() {
+		List<ListEntry> textureList = new ArrayList<>();
 		textureList.add(new SelectEntry(TexturePackDisplay.DEFAULT_TEXTURE_PACK, Game::exitMenu, false));
 
 		// Generate texture packs folder
@@ -56,14 +52,14 @@ public class TexturePackDisplay extends Display {
 	
 	public TexturePackDisplay() {
 		super(true, true,
-				new Menu.Builder(false, 2, RelPos.CENTER, loadTexturePacks()).setSize(48, 48).createMenu());
+				new Menu.Builder(false, 2, RelPos.CENTER, getAllTexturePacks()).setSize(48, 64).createMenu());
 	}
 
 	@Override
 	public void onExit() {
 		super.onExit();
+		getAllTexturePacks();
 		updateSheets();
-		loadTexturePacks();
 	}
 
 	private void updateSheets() {
@@ -74,7 +70,7 @@ public class TexturePackDisplay extends Display {
 				// Load default sprite sheet.
 				sheets = Renderer.loadDefaultSpriteSheets();
 			} else {
-				try (ZipFile zipFile = new ZipFile(new File(location, textureList.get(menus[0].getSelection()).toString()))) {
+				try (ZipFile zipFile = new ZipFile(new File(location, Objects.requireNonNull(menus[0].getCurEntry()).toString()))) {
 					for (int i = 0; i < TexturePackDisplay.ENTRY_NAMES.length; i++) {
 						ZipEntry entry = zipFile.getEntry(TexturePackDisplay.ENTRY_NAMES[i]);
 						if (entry != null) {
@@ -86,12 +82,15 @@ public class TexturePackDisplay extends Display {
 								return;
 							}
 						} else {
-							Logger.info("Couldn't load sheet {}, ignoring.", TexturePackDisplay.ENTRY_NAMES[i]);
+							Logger.debug("Couldn't load sheet {}, ignoring.", TexturePackDisplay.ENTRY_NAMES[i]);
 						}
 					}
 				} catch (IllegalStateException | IOException e) {
 					e.printStackTrace();
-					Logger.error("Could not load texture pack with name {} at {}.", textureList.get(menus[0].getSelection()).toString(), location);
+					Logger.error("Could not load texture pack with name {} at {}.", Objects.requireNonNull(menus[0].getCurEntry()).toString(), location);
+					return;
+				} catch (NullPointerException e) {
+					e.printStackTrace();
 					return;
 				}
 			}
@@ -103,7 +102,7 @@ public class TexturePackDisplay extends Display {
 			return;
 		}
 
-		Logger.debug("Changed texture pack.");
+		Logger.info("Changed texture pack.");
 	}
 
 	@Override
@@ -113,8 +112,9 @@ public class TexturePackDisplay extends Display {
 		// Title
 		Font.drawCentered(Localization.getLocalized("Texture Packs"), screen, Screen.h - 180, Color.WHITE);
 
-		// Movement instructions
-		Font.drawCentered("Use "+ Game.input.getMapping("cursor-down") + ", " + Game.input.getMapping("cursor-up") + ", and " + Game.input.getMapping("SELECT"), screen, Screen.h - 11, Color.DARK_GRAY);
+		// Info text at the bottom.
+		Font.drawCentered("Use "+ Game.input.getMapping("cursor-down") + " and " + Game.input.getMapping("cursor-up") + " to move.", screen, Screen.h - 17, Color.DARK_GRAY);
+		Font.drawCentered(Game.input.getMapping("SELECT") + " to select.", screen, Screen.h - 9, Color.DARK_GRAY);
 
 		/* Does not work as intended because the sprite sheets aren't updated when changing selection.
 		int h = 2;
